tests/error/typedef_to_itself.c
// fail "'type_0': [0] Undeclared identifier."
typedef type_0 type_0;

int main(){
    type_0 a;
}
